# snn

./: CMakeLists.txt
header/: forwordPropagation.h  weight.h
kernal/: forwordPropagation.cl  forwordPropagation_kernal.h
src/: forwordPropagation.c  main.c  weight.c
